--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
-    "trailingComma": "es5",
+    "semi": false,
+    "singleQuote": true,
     "tabWidth": 2,
-    "semi": true,
-    "singleQuote": true
-}
+    "trailingComma": "es5",
+    "endOfLine": "lf"
+  }
+  
