--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "config",
+  "name": "dotfiles-package",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,26 +11,42 @@
     "url": "git+https://github.com/shimphillip/config.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Phillip Shim",
+  "license": "MIT",
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.7.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react": "^7.19.0",
     "husky": "^4.2.3",
-    "jest": "^25.1.0",
-    "lint-staged": "^10.0.7",
+    "jest": "^25.2.4",
+    "lint-staged": "^10.1.0",
     "nodemon": "^2.0.2",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.2",
     "supertest": "^4.0.2"
+  },
+  "lint-staged": {
+    "*js": [
+      "./node_modules/.bin/eslint — fix",
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "engines": {
+    "node": "12.16.1"
   },
   "bugs": {
     "url": "https://github.com/shimphillip/config/issues"
